Fix number overlap for hmtl pubs in IE7
https://www.pivotaltracker.com/story/show/54022471

--- a/app/assets/stylesheets/frontend/views/_html-publications.scss
+++ b/app/assets/stylesheets/frontend/views/_html-publications.scss
@@ -118,6 +118,9 @@
             margin: (-$gutter) 0 0 (-25%);
             width: 22%;
             padding: ($gutter+$gutter-one-sixth) 0 $gutter 3%;
+            @include ie(7) {
+              margin-left: -35%;
+            }
           }
         }
       }
